# daemon-sync-dirs

./: CMakeLists.txt  README.md
src/: main.cpp
src/daemon/: Daemon.cpp  Daemon.h
src/flag/: Flag.cpp  Flag.h  Manager.cpp  Manager.h  Parser.cpp  Parser.h
src/logger/: Logger.cpp  Logger.h
src/syncdaemon/: Daemon.cpp  Daemon.h
src/watcher/: Status.h  Watcher.cpp  Watcher.h
